# r-tree

./: .gitignore  CMakeLists.txt  README.md  compile.sh
benchmark/: CMakeLists.txt  README.md  output.csv  run.sh
benchmark/geometry/: README.md  geom.py  utils.py
benchmark/geometry/shapefile/: BRMUE250GC_SIR.cxx  README.md  helper.py
benchmark/geometry/shapefile/search-rectangles/: retangulo_maior.dbf  retangulo_maior.shp  retangulo_maior.shx
benchmark/geometry/synthetic_rectangle/: README.md  autortree.py  tree.jnlp.spec  tree.jnlp.spec.cxx
benchmark/tests/: helper.hpp  insert.hpp  real_insert.hpp  real_search.hpp  search.hpp  suite.cpp  synthetic_insert.hpp  synthetic_search.hpp
benchmark/visual_profiler/: README.md  htree.py  insert.py  search.py  viz.py
rtree/: SplitStrategy.hpp  geometry.cpp  geometry.hpp  split.hpp  tree.cpp  tree.hpp
